<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/top_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_title"
        android:textSize="48dp"
        android:fontFamily="@font/notoblack"
        app:layout_constraintBottom_toTopOf="@id/top_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/top_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_text"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@id/top_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_title"/>

    <LinearLayout
        android:id="@+id/top_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_text">

        <Button
            android:id="@+id/top_button_leading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_button_leading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_title" />

        <Button
            android:id="@+id/top_button_writing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_button_writing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_title" />

        <Button
            android:id="@+id/top_button_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_button_other"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_title" />

        <Button
            android:id="@+id/top_button_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_button_config"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_title" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>